Production security enhancements and standardized error handling

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,14 @@ VESTING_ALLOCATION_PERCENT=35
 # This directory should be excluded from version control
 KEYPAIR_DIR=keypairs
 
+# Keypair Encryption Passwords
+# In production environment, these passwords are REQUIRED and must be at least 16 characters
+# You can set a default password for all keypairs or individual passwords for specific keypairs
+# Format for specific keypair: KEYPAIR_PASSWORD_KEYNAME (e.g., KEYPAIR_PASSWORD_AUTHORITY)
+KEYPAIR_PASSWORD=SecurePasswordExample123!
+KEYPAIR_PASSWORD_AUTHORITY=IndividualPasswordForAuthority123!
+KEYPAIR_PASSWORD_DEV_WALLET=SecureDevWalletPassword456!
+
 # Metadata Configuration
 TOKEN_DESCRIPTION="VCoin (VCN) is a utility token for the V ecosystem."
 TOKEN_IMAGE_URL=https://viwoapp.org/vcn-logo.png
