--- a/package.json
+++ b/package.json
@@ -3,34 +3,33 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "NODE_ENV=production ts-node src/index.ts",
+    "start:dev": "NODE_ENV=development ts-node src/index.ts",
     "build": "tsc",
-    "create-token": "ts-node src/create-token.ts",
-    "allocate-token": "ts-node src/allocate-token.ts",
-    "update-metadata": "ts-node src/update-metadata.ts",
-    "presale": "ts-node src/presale.ts",
-    "presale:multicurrency-demo": "ts-node tests/examples/presale-multicurrency-example.ts",
-    "vesting": "ts-node src/vesting.ts",
-    "authority": "ts-node src/authority-controls.ts",
-    "upgrade": "ts-node src/upgrade-governance.ts",
-    "upgrade-report": "ts-node scripts/generate-governance-report.js",
-    "test": "jest",
-    "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration",
-    "test:security": "jest tests/security",
-    "test:e2e": "jest tests/e2e",
-    "test:coverage": "jest --coverage",
-    "test:metadata": "node scripts/test-metadata-update.js",
-    "test:all": "npm run test:unit && npm run test:integration && npm run test:security && npm run test:e2e && npm run test:metadata",
-    "test:quick": "jest --config jest.quick.config.js",
+    "create-token": "NODE_ENV=production ts-node src/create-token.ts",
+    "create-token:dev": "NODE_ENV=development ts-node src/create-token.ts",
+    "allocate-token": "NODE_ENV=production ts-node src/allocate-token.ts",
+    "allocate-token:dev": "NODE_ENV=development ts-node src/allocate-token.ts",
+    "update-metadata": "NODE_ENV=production ts-node src/update-metadata.ts",
+    "update-metadata:dev": "NODE_ENV=development ts-node src/update-metadata.ts",
+    "presale": "NODE_ENV=production ts-node src/presale.ts",
+    "presale:dev": "NODE_ENV=development ts-node src/presale.ts",
+    "vesting": "NODE_ENV=production ts-node src/vesting.ts",
+    "vesting:dev": "NODE_ENV=development ts-node src/vesting.ts",
+    "authority": "NODE_ENV=production ts-node src/authority-controls.ts",
+    "authority:dev": "NODE_ENV=development ts-node src/authority-controls.ts",
+    "authority:init": "NODE_ENV=production ts-node src/authority-controls.ts init",
+    "authority:check": "NODE_ENV=production ts-node src/authority-controls.ts check",
+    "authority:upgrade": "NODE_ENV=production ts-node src/authority-controls.ts upgrade",
+    "authority:backup": "NODE_ENV=production ts-node src/authority-controls.ts backup",
+    "upgrade": "NODE_ENV=production ts-node src/upgrade-governance.ts",
+    "upgrade:dev": "NODE_ENV=development ts-node src/upgrade-governance.ts",
+    "upgrade:check": "NODE_ENV=production ts-node src/upgrade-governance.ts check",
     "type-check": "node scripts/show-errors.js",
     "lint": "eslint src --ext .ts",
     "build:token2022": "cd program && cargo build-bpf",
     "deploy:token2022": "cd program && solana program deploy target/deploy/vcoin_token.so",
-    "example:token2022": "ts-node src/examples/vcoin-token2022-example.ts",
-    "setup:token2022": "chmod +x scripts/setup-token2022.sh && ./scripts/setup-token2022.sh",
-    "verify:token2022": "ts-node scripts/verify-token2022-deployment.ts",
-    "interact:token2022": "ts-node scripts/interact-with-program.ts"
+    "verify:token2022": "NODE_ENV=production ts-node scripts/verify-token2022-deployment.ts"
   },
   "keywords": [
     "solana",
@@ -53,6 +52,8 @@
     "borsh": "^2.0.0",
     "bs58": "^6.0.0",
     "dotenv": "^16.4.7",
+    "fs-extra": "^11.3.0",
+    "proper-lockfile": "^4.1.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
