--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -20,6 +20,9 @@ spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
 spl-token-metadata-interface = "0.2.0"
 spl-type-length-value = "0.3.0"
+pyth-sdk-solana = "0.9.0"
+switchboard-v2 = "0.4.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 solana-program-test = "1.18.0"
