--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -10,23 +10,23 @@ no-entrypoint = []
 test-bpf = []
 
 [dependencies]
-borsh = "1.5.6"
-thiserror = "1.0.50"
-solana-program = "1.18.0"
-num-derive = "0.4"
-num-traits = "0.2"
+borsh = "0.10.3"
+thiserror = "1.0.61"
+solana-program = "1.18.11"
+num-derive = "0.4.2"
+num-traits = "0.2.19"
 spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
-spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
-spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
-spl-token-metadata-interface = "0.2.0"
-spl-type-length-value = "0.3.0"
-pyth-sdk-solana = "0.9.0"
-switchboard-v2 = "0.4.0"
+spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
+spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
+spl-token-metadata-interface = "0.3.1"
+spl-type-length-value = "0.4.2"
+pyth-sdk-solana = "0.10.4"
+switchboard-solana = "0.30.4"  # Replaced switchboard-v2 with switchboard-solana
 lazy_static = "1.4.0"
 
 [dev-dependencies]
-solana-program-test = "1.18.0"
-solana-sdk = "1.18.0"
+solana-program-test = "1.18.11"
+solana-sdk = "1.18.11"
 
 [lib]
 crate-type = ["cdylib", "lib"]
